Modernize code and UI